# ExiaBackend

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml
docs/plans/: 2026-03-16-team-template-cloud-guards.md
migrations/: 001_init.sql  002_create_raid_plans.sql  002_restricted_password.sql  003_create_team_templates.sql  003_raid_plan_realtime.sql  004_team_template_realtime.sql  005_team_template_cloud_guards.sql  006_team_template_local_only_scope_guards.sql
src/: lib.rs
src/handlers/: auth.rs  data.rs  mod.rs  raid.rs  raid_realtime.rs  team.rs  team_realtime.rs  user.rs
src/models/: mod.rs  requests.rs
src/utils/: jwt.rs  mod.rs  team_templates.rs
