[package]
name = "exia-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
