[package]
name = "exia-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "*", features = ["d1"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
jsonwebtoken = "*"
chrono = { version = "*", features = ["serde"] }
argon2 = "*"
rand = "*"
getrandom = { version = "*", features = ["js"] }
